# embedded-database

./: Cargo.toml  README.md
benches/: data_structures.rs  helpers.rs
src/: database.rs  lib.rs  main.rs
src/database/: mod.rs
src/domain/: error.rs  mock_data.rs  mod.rs
src/domain/core/: mcu.rs  mod.rs
src/storage/: mod.rs
src/storage/binary/: b_tree.rs  hashmap.rs
src/storage/core/: constraints.rs  mod.rs
src/storage/core/binary/: b_tree.rs  hashmap.rs
src/storage/core/json/: b_tree.rs  hashmap.rs
src/storage/json/: b_tree.rs  hashmap.rs  mod.rs
src/storage/std/: mod.rs
src/storage/std/binary/: b_tree.rs  hashmap.rs
src/storage/std/json/: b_tree.rs  hashmap.rs  mod.rs
