[package]
name = "embed-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1.0.145"
heapless = "0.9.2"
embedded-alloc = "0.6.0"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "data_structures"
harness = false
